RESOLVED FIXED49100
ASSERT([self window]) fails in -[WebBaseNetscapePluginView restartTimers]
https://bugs.webkit.org/show_bug.cgi?id=49100
Summary ASSERT([self window]) fails in -[WebBaseNetscapePluginView restartTimers]
Alexey Proskuryakov
Reported 2010-11-05 15:00:17 PDT
Fails rather reliably when logging in to http://mail.yahoo.co.jp.
Attachments
proposed patch (1.23 KB, patch)
2010-11-05 15:03 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2010-11-05 15:02:50 PDT
See e.g. -[WebBaseNetscapePluginView start]: if ([self window]) { [self addWindowObservers]; if ([[self window] isKeyWindow]) { [self sendActivateEvent:YES]; } [self restartTimers]; } The plugin may be stopped while sending the activate event, and the window gets null then.
Alexey Proskuryakov
Comment 2 2010-11-05 15:03:55 PDT
Created attachment 73126 [details] proposed patch
Alexey Proskuryakov
Comment 3 2010-11-05 22:35:18 PDT
Comment on attachment 73126 [details] proposed patch This is happening on a machine with Flash 10.0 r45 for me, but not on a machine with Flash 10.1 r85. Go figure.
WebKit Commit Bot
Comment 4 2010-11-05 23:13:28 PDT
Comment on attachment 73126 [details] proposed patch Clearing flags on attachment: 73126 Committed r71467: <http://trac.webkit.org/changeset/71467>
WebKit Commit Bot
Comment 5 2010-11-05 23:13:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.