2010-11-05  Alexey Proskuryakov  <ap@apple.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=49100
        ASSERT([self window]) fails in -[WebBaseNetscapePluginView restartTimers]

        * Plugins/WebBaseNetscapePluginView.mm: (-[WebBaseNetscapePluginView restartTimers]):
        Removed the assertion. Multiple callers provide no guarantee that the plug-in is still alive
        (see bug comments), and there seems to be no harm in executing this function in that case.

Canonical link: https://commits.webkit.org/61954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71467 268f45cc-cd09-0410-ab3c-d52691b4dbfc